# CPUPhysicsEngine

./: AABB.c  AABB.h  CMakeLists.txt  Constants.c  Constants.h  ExpandableArray.c  ExpandableArray.h  Object.c  Object.h  Renderer.c  Renderer.h  Triangle.c  Triangle.h  Vector3.c  Vector3.h  Vector4.c  Vector4.h  WindowsFuckery.c  WindowsFuckery.h  design_doc.md  invsqrt.asm  main.c  main.h
